# tokdrift

./: .gitignore  README.md  prepare-env-conda.sh  prepare-env.sh  pyproject.toml
data/input/avatar/: base.py  var.py
data/output/: results_summary_acc_delta.csv  results_summary_accuracy.csv
data/output/diff_pct/: all_diff_pct.csv  mixing_diff_pct.csv
data/output/results/: avg_token_length_diff.csv  avg_token_length_diff_per_model.csv  results_summary_java_accuracy.csv  results_summary_java_execute1.csv  results_summary_python_accuracy.csv  results_summary_python_execute1.csv  results_summary_sensitivity.csv  spearman_correlation_delta_results.csv  spearman_correlation_results.csv  token_length_diff.csv
data/output/sample_info/: all_diff_samples.csv  all_total_samples.csv  fragment_unchanged_diff_samples.csv  merging_total_samples.csv  splitting_total_samples.csv
data/output/sensitivity/: fragment_changed_sensitivity.csv  fragment_unchanged_sensitivity.csv
datasets/Codenet/CodeQwen1_5/: CodeQwen1_5.py
datasets/Codenet/Qwen2_5-Coder/: Qwen2_5-Coder.py
datasets/Codenet/base/: base.py
datasets/Codenet/var/: var.py
datasets/codenet/base/: base.py
scripts/: baseline_example.sh  calculate_nll.py  split_avatar.py  split_codenet.py  variant_example.sh
src/tokdrift/: base.py  config.py  config_iterator.py  data_filter.py  data_generator.py  evaluator.py  generation.py  immutable_identifiers_handler.py  normalize_humanevalpack_java.py  regex.py  result_evaluator.py  result_extractor.py  run_experiments.py  utils.py  vector_processor.py  vector_visualizer.py
(+354 files in other folders)
